PulseTemple.Web/wwwroot/css/site.css
/* ... */
.lime-circle {
    aspect-ratio: 1/1;
    display: none;
    border-radius: 1000px;
    width: 10px;
    height: 10px;
    background-color: var(--primary-color);
}

/* Logo title */

.logo-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    gap: 2rem;
    background-color: var(--primary-color);
    padding: 2rem 3rem;
    border-radius: 20px;
    margin: 0 1rem;

    @media (width <= 768px) {
        flex-direction: column-reverse;
        gap: 3rem;
    }
}

.logo-title-list {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 2rem;

    @media (width <= 768px) {
        justify-content: start;
    }
}

.logo-title-item {
    @media (width <= 768px) {
        min-width: 204px;
    }
}


/*---*/

.accept-user-terms-container{
    display: flex;
    gap:0.5rem;
    justify-content: center;
    align-items: center;
}
.accept-user-terms-input {
    accent-color: var(--light-color);
    transform: scale(1.25);
}
.field-validation-error{
    color: red;
}
.warning {
    color: red;
    font-size: 0.875rem;
}
.wider-btn{
    width:20rem !important;
}
.primary-hr {
    background-color: var(--primary-color);
    opacity: 0.2;
    width: 100%;
    height: 2px;
    border: none;
}
.h1-title {
    font-size: 3.375rem;
    line-height: 1;
    font-weight: 700;

    @media (width <= 800px) {
        font-size: 2.375rem;
    }
}

.h2-title {
    font-size: 3rem;
    line-height: 1;
    font-weight: 700;
    margin:0;
    @media (width <= 768px) {
        font-size: 2.5rem;
    }
}

.h3-title {
    font-size: 1.750rem;
    line-height: 1;
    font-weight: 700;
}

.primary-btn {
    background-color: var(--primary-button-bg-color);
    color: var(--primary-button-text-color);
    white-space: nowrap;
    font-weight: 700;
    border-radius: 1000px;
    padding: 0.6rem 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.2rem;
    width: fit-content;
    transition: transform var(--header-color-hover-duration) ease-out;

    @media (width <= 800px){
        padding: 0.4rem 0.6rem;
        font-size: 0.9rem;
    }

    &::after {
        content: "\f054";
        font-family: "Font Awesome 7 Pro";
        font-size: 1em;
        margin-left: 0.5rem;
        transform: translateX(0);
        }

    &:hover {
        transform: scale(1.07);
        }
    }

.line {
    height: 1px;
    opacity: 0.3;
    background-color: var(--primary-color);
}
    /* =========================================
    Navigation
    ========================================= */

header {
    background-color: var(--header-bg-color);
    background-image: url(../images/dark-section-img-bg.png);
    background-repeat: no-repeat;
    background-position: top;
    color: var(--header-text-color);
    padding: 1.563rem 2rem;
    margin: 1rem;
    border-radius: 20px;
    height: auto;

    &:has(.header-hero-section) {
        padding: 1.563rem 2rem 0;
        overflow: hidden;
    }

    @media (width <= 1200px) {
        padding: 0.75rem 1rem;
        margin: 0.5rem;

        &:has(.header-hero-section) {
            padding: 0.75rem 1rem 0;
        }
    }

    @media (width <= 800px) {
        .header-company-name {
            display: none;
        }

        .account-menu-sign-up {
            display: none;
        }
    }
}

.menu-item {
    display: inline-block;
    transition: color var(--header-color-hover-duration) ease-in;
    color: var(--main-menu-item-color);
    position: relative;

    &:hover {
        color: var(--main-menu-item-hover-color);
    }

        &:hover::after {
            width: 100%;
        }

    &::after {
        content: "";
        width: 0%;
        height: 1px;
        position: absolute;
        background-color: var(--primary-color);
        transition: width var(--header-color-hover-duration) ease-in;
        top: 100%;
        right: 0;
        left: 0;
    }
}

    .active {
        color: var(--primary-color);
    }

    .dropdown {
        display: flex;
        flex-direction: column;
        position: relative;
        z-index: 100;
        gap: 1rem;

        &:hover .dropdown-arrow-img {
            --arrow-up-color: var(--primary-color);
        }

        &:hover .dropdown-list {
            opacity: 1;
            pointer-events: all;
        }
    }

.dropdown-trigger {
    cursor: pointer;

    &:after {
        content: "\f078";
        font-family: "Font Awesome 7 Pro";
        display: inline-block;
        transition: transform var(--header-color-hover-duration) ease-in;
    }

    &:hover:after {
        transform: rotateX(180deg);
    }
}

    .dropdown-list {
        top: 100%;
        position: absolute;
        display: flex;
        gap: 1rem;
        flex-direction: column;
        white-space: nowrap;
        color: var(--dark-color);
        list-style: circle;
        background-color: var(--primary-color);
        text-align: start;
        padding: 1.5rem 2rem;
        border-radius: 20px;
        opacity: 0;
        pointer-events: none;
        transition: opacity var(--header-color-hover-duration) ease-in;


        & li {
            list-style: disc;

            & .dropdown-item {
                transition: color var(--header-color-hover-duration) ease-in;
                color: var(--dark-color);
                font-weight: 500;
                padding: 0.4rem;
                width: 100%;
            }

                & .dropdown-item:hover {
                    opacity: 0.8;
                }
        }
    }

    .dropdown-arrow-img {
        transition: color var(--header-color-hover-duration) ease-in;
        --arrow-up-color: var(--white-color);
        width: 20px;
        height: 20px;
    }

    .header-section {
        display: flex;
        position: relative;
        justify-content: space-between;
    }
/* ... */

